Fix BackgroudWrap component height

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,9 @@
     }
     .opacity-100-important {
         opacity: 1!important;
-    }
-   
+    }  
 }
 
+#root {
+    position: relative;
+}
